<resources>
    <string name="uikit_module_name">Uikit</string>

    <string name="uikit_add">增加</string>
    <string name="uikit_confirm">确认</string>
    <string name="uikit_cancel">取消</string>
    <string name="uikit_delete">删除</string>
    <string name="uikit_notice_cancel_edit">确认取消编辑吗?</string>
    <string name="uikit_notice_cancel_signing">确认取消签约吗?</string>
    <string name="uikit_empty">暂无数据～</string>
    <string name="uikit_editing">编辑</string>
    <string name="uikit_completed">完成</string>
    <string name="uikit_retry">重试</string>
    <string name="uikit_refresh">刷新</string>
    <string name="uikit_yuan">元</string>
    <string name="uikit_yuan_symbol">¥</string>
    <string name="uikit_ten_thousand_yuan">万元</string>
    <string name="uikit_odd">单</string>
    <string name="uikit_price_with_symbol">¥ %1$.2f</string>
    <string name="uikit_logout">退出登录</string>
    <string name="uikit_payment_now">立即支付</string>
    <string name="uikit_confirm_logout">确认退出吗?</string>
    <string name="uikit_previous_step">上一步</string>
    <string name="uikit_next_step">下一步</string>
    <string name="uikit_please_input">请输入</string>
    <string name="uikit_please_select">请选择</string>
    <string name="uikit_understand">知道了</string>
    <string name="uikit_remarks">备注</string>
    <string name="uikit_remarks_colon">备注:</string>
    <string name="uikit_rent">租金</string>
    <string name="uikit_lowest_price">底价</string>
    <string name="uikit_payment_method">付款方式</string>
    <string name="uikit_payment_method_colon">付款方式:</string>
    <string name="uikit_view_details">查看详情</string>
    <string name="uikit_details">详情</string>
    <string name="uikit_zero">0</string>
    <string name="uikit_bedroom">卧室</string>
    <string name="uikit_bedroom_simplify">室</string>
    <string name="uikit_living_room">客厅</string>
    <string name="uikit_living_room_simplify">厅</string>
    <string name="uikit_kitchen">厨房</string>
    <string name="uikit_kitchen_simplify">厨</string>
    <string name="uikit_bathroom">卫生间</string>
    <string name="uikit_bathroom_simplify">卫</string>
    <string name="uikit_balcony">阳台</string>
    <string name="uikit_balcony_simplify">阳</string>
    <string name="uikit_square_simplify">平</string>
    <string name="uikit_save">保存</string>
    <string name="uikit_update_success">更新成功</string>
    <string name="uikit_followup_success">跟进成功</string>
    <string name="uikit_apply_for_success">申请成功</string>
    <string name="uikit_new_success">添加成功</string>
    <string name="uikit_signing_success">签约成功</string>
    <string name="uikit_delete_successful">删除成功</string>
    <string name="uikit_operation_is_successful">操作成功</string>
    <string name="uikit_setup_successfully">设置成功</string>
    <string name="uikit_abandon">放弃</string>
    <string name="uikit_record">记录</string>
    <string name="uikit_certificate_type">证件类型</string>
    <string name="uikit_certificate_type_colon">证件类型:</string>
    <string name="uikit_certificate_number">证件号码</string>
    <string name="uikit_certificate_number_colon">证件号码:</string>
    <string name="uikit_other">其他</string>
    <string name="uikit_tons">吨</string>
    <string name="uikit_degrees">度</string>
    <string name="uikit_cubic_meter">m³</string>
    <string name="uikit_square_meters">m²</string>
    <string name="uikit_total_of_days">共%d天</string>
    <string name="uikit_remarks_count_indicator">%d/%d</string>
    <string name="uikit_none">无</string>
    <string name="uikit_published">发布</string>
    <string name="uikit_published_success">发布成功</string>
    <string name="uikit_features">特色</string>
    <string name="uikit_bonus">奖金</string>
    <string name="uikit_deduction">扣款</string>
    <string name="uikit_pass">通过</string>
    <string name="uikit_reject">拒绝</string>
    <string name="uikit_to">至</string>
    <string name="uikit_percent_sign">%</string>
    <string name="uikit_time">时间</string>
    <string name="uikit_date">日期</string>
    <string name="uikit_date_colon">日期:</string>
    <string name="uikit_select_date">请选择日期</string>
    <string name="uikit_configure">配置</string>
    <string name="uikit_upload_pictures">上传图片</string>
    <string name="uikit_submit">提交</string>
    <string name="uikit_date_of_birth">出生日期</string>
    <string name="uikit_select_date_of_birth">请选择出生日期</string>
    <string name="uikit_constellation">星座</string>
    <string name="uikit_select_constellation">请选择星座</string>
    <string name="uikit_occupation">职业</string>
    <string name="uikit_work_unit">工作单位</string>
    <string name="uikit_hobbies">兴趣爱好</string>
    <string name="uikit_new">添加</string>
    <string name="uikit_number_of_people">%d人</string>
    <string name="uikit_approved">审批通过</string>
    <string name="uikit_rejected">驳回</string>
    <string name="uikit_refund">退款</string>
    <string name="uikit_attachment_picture">附件图片</string>
    <string name="uikit_save_to_album">保存到相册</string>

    <string name="uikit_id_card_photo">身份证照片</string>
    <string name="uikit_id_card_front">人像面</string>
    <string name="uikit_id_card_delete_front">确认删除人像面吗?</string>
    <string name="uikit_id_card_back">国徽面</string>
    <string name="uikit_id_card_delete_back">确认删除国徽面吗?</string>

    <string name="uikit_agreement_user">用户协议</string>
    <string name="uikit_agreement_privacy">隐私政策</string>
    <string name="uikit_check_for_upgrade">检查更新</string>

    <string name="uikit_contact_information">联系人信息</string>
    <string name="uikit_name">姓名</string>
    <string name="uikit_name_colon">姓名:</string>
    <string name="uikit_nickname">昵称</string>
    <string name="uikit_avatar">头像</string>
    <string name="uikit_contact_phone">联系电话</string>
    <string name="uikit_contact_phone_colon">联系电话:</string>
    <string name="uikit_alternate_phone">备用电话</string>
    <string name="uikit_alternate_phone_colon">备用电话:</string>
    <string name="uikit_phone">手机</string>
    <string name="uikit_sex">性别</string>
    <string name="uikit_sex_colon">性别:</string>
    <string name="uikit_email">邮箱</string>
    <string name="uikit_email_colon">邮箱:</string>
    <string name="uikit_wechat">微信号</string>
    <string name="uikit_qq_or_wechat">QQ/微信号</string>
    <string name="uikit_qq_or_wechat_colon">QQ/微信号:</string>
    <string name="uikit_wechat_colon">微信号:</string>
    <string name="uikit_identity">身份</string>
    <string name="uikit_id_card">身份证</string>
    <string name="uikit_id_card_colon">身份证:</string>
    <string name="uikit_long_term_validity">长期有效</string>
    <string name="uikit_input_error_name">姓名不能为空</string>
    <string name="uikit_input_error_sex">性别不能为空</string>
    <string name="uikit_input_error_identity">身份不能为空</string>
    <string name="uikit_input_error_email">请输入正确的邮箱</string>
    <string name="uikit_input_error_phone">请输入正确的手机号</string>
    <string name="uikit_please_input_name">请输入姓名</string>
    <string name="uikit_please_input_phone">请输入手机号</string>
    <string name="uikit_please_select_sex">请选择性别</string>
    <string name="uikit_long_text">这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本这是长文本</string>
    <string name="uikit_date_year_month">%d年%s月</string>
    <string name="uikit_date_ymd">%d年%s月%s日</string>
    <string name="uikit_upgrade_now">立即更新</string>
    <string name="uikit_upgrade_version">%s版本全新上线</string>
    <string name="uikit_upgrade_apk_size">更新包大小: %sMB</string>
    <string name="uikit_file_upload_failed">更新包大小: %sMB</string>
    <string name="uikit_click_upload">点击上传</string>
    <string name="uikit_click_upload_image">点击上传图片</string>
    <string name="uikit_click_upload_file">点击上传文件</string>
</resources>