<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label"
        style="@style/IToysAndroid.Body2"
        android:layout_width="match_parent"
        android:paddingHorizontal="16dp"
        android:text="@string/uikit_remarks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit"
        style="@style/IToysAndroid.Input"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="start|top"
        android:minHeight="72dp"
        app:layout_constraintTop_toBottomOf="@id/label"
        tools:hint="@string/uikit_please_input" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/indicator"
        style="@style/IToysAndroid.Body2"
        android:layout_marginTop="8dp"
        android:textColor="@color/uikit_colorful_86909C"
        app:layout_constraintEnd_toEndOf="@id/edit"
        app:layout_constraintTop_toBottomOf="@id/edit"
        tools:text="@string/uikit_remarks_count_indicator" />
</androidx.constraintlayout.widget.ConstraintLayout>