<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/IToysAndroid.Body2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:text="@string/uikit_remarks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit"
        style="@style/IToysAndroid.Input"
        android:layout_width="match_parent"
        android:background="@color/uikit_colorful_white"
        android:gravity="start|top"
        android:hint="@string/uikit_please_input"
        android:minHeight="98dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/indicator"
        style="@style/IToysAndroid.Body2"
        android:layout_margin="16dp"
        android:textColor="@color/uikit_colorful_86909C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/uikit_remarks_count_indicator" />
</androidx.constraintlayout.widget.ConstraintLayout>