<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="37dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/upgrade_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/uikit_img_upgrade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upgrade_content_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/uikit_rectangle_bottom_14_white"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/upgrade_logo"
        app:layout_constraintStart_toStartOf="@id/upgrade_logo"
        app:layout_constraintTop_toBottomOf="@id/upgrade_logo">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upgrade_version"
            style="@style/IToysAndroid.Title1"
            android:layout_width="0dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/uikit_colorful_7C45FD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/uikit_upgrade_version" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upgrade_content"
            style="@style/IToysAndroid.Body2"
            android:layout_width="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upgrade_version"
            tools:text="@string/uikit_long_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upgrade_apk_size"
            style="@style/IToysAndroid.Body2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upgrade_content"
            tools:text="@string/uikit_upgrade_apk_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upgrade_now"
            style="@style/IToysAndroid.Button.Background"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/uikit_upgrade_now"
            app:backgroundTint="@color/uikit_colorful_7C45FD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upgrade_apk_size" />

        <cn.bingoogolapple.progressbar.BGAProgressBar
            android:id="@+id/download_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:max="100"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:visibility="gone"
            app:bga_pb_isCapRounded="true"
            app:bga_pb_mode="horizontal"
            app:bga_pb_reachedColor="@color/uikit_colorful_7C45FD"
            app:bga_pb_reachedHeight="4dp"
            app:bga_pb_textColor="@color/uikit_colorful_7C45FD"
            app:bga_pb_textMargin="8dp"
            app:bga_pb_textSize="14sp"
            app:bga_pb_unReachedColor="@color/uikit_colorful_BFBEBF"
            app:bga_pb_unReachedHeight="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upgrade_apk_size"
            tools:progress="80" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cancel_upgrade"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/uikit_ic_close_white_with_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upgrade_content_group" />
</androidx.constraintlayout.widget.ConstraintLayout>